--- a/projects/01MainAssignments/project2/index.html
+++ b/projects/01MainAssignments/project2/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Project</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.js" integrity="sha512-TU9AWtV5uUZPX8dbBAH8NQF1tSdigPRRT82vllAQ1Ke28puiqLA6ZVKxtUGlgrH6yWFnkKy+sE6luNEGH9ar0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<meta charset="utf-8">
+	<title>elena</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
+
 </head>
+
 <body>
-	<script src="DraggableCircle.js"></script> 
-	<script src="script.js"></script> 
-	
+    <script src="draggable.js"></script>
+    <script src="spiral.js"></script>
+
+	<script src="sketch.js"></script>
 </body>
 
 </html>
